--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,14 @@ AssetFileList.csv
 /bin/*
 !/bin/libtiff64r.dll
 
+!/map_source/
+/map_source/*
+!/map_source/zm/
+/map_source/zm/*
+!/map_source/zm/zm_jans_haven.bak
+!/map_source/zm/zm_jans_haven.lin
+!/map_source/zm/zm_jans_haven.map
+
 !sound_assets
 /sound_assets/*
 !/sound_assets/music
